tests/ui/imports/shadow-glob-module-resolution-4.stderr
error[E0432]: unresolved import `b::C`
  --> $DIR/shadow-glob-module-resolution-4.rs:13:5
   |
LL | use b::C as e;
   |     ^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
